--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
 <!DOCTYPE html>
 <html>
+    <!--
+          ___
+         |   |
+     __  |   |  __
+    /  \=======/  \
+    \    -   -    /
+     |   o   Q   |
+     \  .-'''-.  /
+      '-\__Y__/-'
+         `---`
+
+    Fancy Bear hacked my homework
+    -->
     <head>
         <title>Threat Actor Name Generator</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <meta name="title" content="Threat Actor Name Generator">
+        <meta name="description" content="Generate real-time psuedorandom threat actor names">
+        <meta name="keywords" content="security,hacking,scary,spooky,hackers,russia,china,hack,attribution,hard">
+        <meta name="robots" content="index, follow">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="language" content="English">
+        <meta name="author" content="@Plazmaz">
     </head>
     <body>
         <h1>Threat Actor Name Generator</h1>
+        <br>
+        <br>
+        <br>
         <h3>Our intelligence feeds suggest the threat actor responsible is...</h3>
         <br>
         <span id="actor"></span>
         <br><br><br>
         <button id="btn">Generate Next Attribution</button>
+        <br>
+        <span id="footer">This stupid site was made by <a href="https://dylankatz.com/?utm_source=threatactors" rel="noopener">Dylan Katz</a></footer>
         <script src="index.js"></script>
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-67106116-6">
